--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,48 @@
-<h1>Welcome!</h1>
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="play-container">
-    <p>You've clicked <span (click)="countClick()">this</span> {{ clickCounter }} times.</p>
-</div>
+<head>
+	<title>Bootstrap Example</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+
+	<div class="jumbotron text-center" style="background-color:#ffffff;">
+		<h1><font color="#888bff">Why MEAN?</font></h1>
+    <p><font color="#000000">Presented by: Johnathan Ibarra, Anthony Nokeo, Nikol Belkova, Ryan Forest</font></p>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-4">
+				<h3><font color="#888bff">What is MEAN?</font></h3>
+				<p>MEAN stack is a end-to-end JavaScript stack which is one of the most commonly used stacks in cloud
+					applications.</p>
+				<p>MEAN comprises of four different components:</p>
+				<p>MongoDB - </p>
+				<p>Express.js - </p>
+				<p>AngularJS - </p>
+				<p>Node.js - </p>
+
+			</div>
+			<div class="col-sm-4">
+				<h3><font color="#888bff">Benifits</font></h3>
+				<p></p>
+				<p></p>
+			</div>
+			<div class="col-sm-4">
+				<h3><font color="#888bff">Use Cases</font></h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+			</div>
+		</div>
+	</div>
+
+</body>
+
+</html>
