--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <header>
   <div class="container">
-    <a routerLink="/" class="logo">CoolApp</a>
+    <a routerLink="/" class="logo">Home</a>
     <nav>
       <ul>
-        <li><a href="#" routerLink="/">Home</a></li>
-        <li><a href="#" routerLink="/list">List</a></li>
+        <li><a href="#" routerLink="/">MEAN stack</a></li>
+        <li><a href="#" routerLink="/list">Tutorial</a></li>
       </ul>
     </nav>
   </div>
