--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,30 +13,52 @@
 <body>
 
 	<div class="jumbotron text-center" style="background-color:#ffffff;">
-		<h1><font color="#888bff">Why MEAN?</font></h1>
-    <p><font color="#000000">Presented by: Johnathan Ibarra, Anthony Nokeo, Nikol Belkova, Ryan Forest</font></p>
+		<h1>
+			<font color="#888bff">Why MEAN?</font>
+		</h1>
+		<p>
+			<font color="#000000">Presented by: Johnathan Ibarra, Anthony Nokeo, Nikol Belkova, Ryan Forest</font>
+		</p>
 	</div>
 
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4">
-				<h3><font color="#888bff">What is MEAN?</font></h3>
+				<h3>
+					<font color="#888bff">What is MEAN?</font>
+				</h3>
 				<p>MEAN stack is a end-to-end JavaScript stack which is one of the most commonly used stacks in cloud
 					applications.</p>
 				<p>MEAN comprises of four different components:</p>
-				<p>MongoDB - </p>
-				<p>Express.js - </p>
-				<p>AngularJS - </p>
-				<p>Node.js - </p>
+				<h3>MongoDB</h3>
+				<p>MongoDB is classified as NoSQL data base program. Also, it uses object-oriented organization. MongoDB
+					is also an open source database. MongoDB stores application data, it is known for managing large
+					amounts of data without compromising and the access of data.</p>
+				<h3>Express.js</h3>
+				<p>Express is a web application framework for Node.js. Express is free and open source software that
+					formes the back-end of the MEAN stack. Dealing with the all the database and front-end interactions
+					is one of Express's functions. Express also uses the CommonJS module to reduce the overwriting of
+					variables inside a shared namespace.</p>
+				<h3>AngularJS</h3>
+				<p>AngularJS is a popular front-end framework that is JavaScript based while also being open-source.
+					AngularJS helps developers with the construction of the user-facing side of an application. </p>
+				<h3>Node.js</h3>
+				<p>Node.js is important due to it being a opensource and a JavScript framework. AngualrJS and Node.js
+					have a connection allowing for fast data serving it also has a web web server intergrated into
+					itself for easy to deploy MongoDB database and application to the cloud.</p>
 
 			</div>
 			<div class="col-sm-4">
-				<h3><font color="#888bff">Benifits</font></h3>
+				<h3>
+					<font color="#888bff">Benifits</font>
+				</h3>
 				<p></p>
 				<p></p>
 			</div>
 			<div class="col-sm-4">
-				<h3><font color="#888bff">Use Cases</font></h3>
+				<h3>
+					<font color="#888bff">Use Cases</font>
+				</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
 			</div>
