--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,15 +52,26 @@
 				<h3>
 					<font color="#888bff">Benifits</font>
 				</h3>
-				<p></p>
-				<p></p>
+				<h4>The benifits to MEAN stack include</h4>
+				<li>Open source</li>
+				<li>Perfect for cloud hosting</li>
+				<li>Flexible</li>
+				<li>Scalable</li>
+				<li>Extesible</li>
+				<li>Easy to deploy</li>
+				<li>Easy to use</li>
+				<li>Great for developing cloud native applications</li>
+				<li>Good ability to manage concurrent users</li>
 			</div>
 			<div class="col-sm-4">
 				<h3>
 					<font color="#888bff">Use Cases</font>
 				</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+				<h4>Examples of cases to use MEAN stack</h4>
+				<li>Calanders</li>
+				<li>News aggregation sites</li>
+				<li>Expense tracking</li>
+				<li>Location and mapping</li>
 			</div>
 		</div>
 	</div>
